2004-07-12  Kalle Wallin <kaw@linux.se>
	* options.c: fixed short option handling for multiple short options 
	  at once (-abcde)
	* conf.c: removed support for the old configuration syntax
	* list_window.[c.h]: added LW_HIDE_CURSOR_FLAG
	* screen_help.c: hide cursor on the help screen, removed build info
	* configure.ac: added --disable-raw-mode
	* Added support for SIGSTOP, SIGCONT in raw mode
	* Mouse support is now optional (enable-mouse)
	
2004-07-09  Kalle Wallin <kaw@linux.se>
	* ncmpc-0.11.0 released (r1820)

2004-07-08 Kalle Wallin <kaw@linux.se>
	* doc/keys.sample: Welcome back
	* po/de.po: German language update from Mark Daniel Reidel

2004-07-06 Kalle Wallin <kaw@linux.se>
	* configure.ac: display a warning when NLS is disabled
	* ncmpc-0.11.0-rc1 (r1798)

2004-07-03 Kalle Wallin <kaw@linux.se>
	* wreadln.c, screen_utils.c: ignore mouse events (wgetch)
	* Changed the debug macro D() into a function (--debug now works)
	* Added german translations from Ingmar Gebert (Ogig)
	* support.h, screen.h: using GTime instead of time_t

2004-07-02 Kalle Wallin <kaw@linux.se>
	* options.c: improved error handling in the argv parser
	* screen_play.c: scroll up when moving a item uppwards
	* mpdclient.c: redesigned the plchanges code (its now based on qball's)
	* Added ncurses basic mouse support (playlist and browse screens)

2004-07-01 Kalle Wallin <kaw@linux.se>
	* support.[c|h]: removed the trim() function
	* screen_play.c: use glib's g_strstrip() instead of trim()
	* options.c: removed popt code

2004-06-29
	* command.h: added flags to command_definition_t.
	* command.c: only save keys with a COMMAND_KEY_MODIFIED flag
	  (dont write all key bindings when saving ~/.ncmpc/keys)
	* screen_keydef.c: highlight conflicting key bindings
	* libmpdclient: updated to r1513

2004-06-24 Kalle Wallin <kaw@linux.se>
	* Added configuraton option set-xterm-title xterm-title-format,
	  the xterm title can now include song information

2004-06-22 Kalle Wallin <kaw@linux.se>